[gd_scene load_steps=26 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Player character/Player Stance set.png" type="Texture" id=2]
[ext_resource path="res://Player character/Swing Sprite Sheet.png" type="Texture" id=3]
[ext_resource path="res://Player character/Swingbox.gd" type="Script" id=4]
[ext_resource path="res://Player character/NotePicker.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player character/Player Chop Set.png" type="Texture" id=6]

[sub_resource type="Shader" id=17]
code = "shader_type canvas_item;

uniform bool active = false;

void fragment()
{
	vec4 previous_color = texture(TEXTURE, UV);
	vec4 white_color = vec4(1.0,1.0,1.0,previous_color.a);
	vec4 new_color = previous_color;
	if (active==true)
	{
		new_color=white_color;
	}
	COLOR = new_color;
}"

[sub_resource type="ShaderMaterial" id=18]
shader = SubResource( 17 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 6 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 12.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": false,
"name": "New Anim",
"speed": 12.0
} ]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), null ],
"loop": false,
"name": "Swing",
"speed": 12.0
} ]

[sub_resource type="CapsuleShape2D" id=6]
radius = 8.0
height = 6.0

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 4, 2 )

[sub_resource type="OccluderPolygon2D" id=16]
polygon = PoolVector2Array( -7, 14, -6, 15, 9, 15, 9, 13, 4, 11, -9, 12 )

[sub_resource type="Animation" id=19]
resource_name = "Blink"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=20]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
material = SubResource( 18 )
frames = SubResource( 12 )
frame = 3
playing = true

[node name="SwingofAxe" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
offset = Vector2( -2, 0 )

[node name="Hurt" type="Area2D" parent="."]
position = Vector2( 0, 2 )
collision_mask = 0

[node name="Hurtbox" type="CollisionShape2D" parent="Hurt"]
shape = SubResource( 6 )

[node name="Swingbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 4 )

[node name="Swing" type="CollisionShape2D" parent="Swingbox"]
position = Vector2( 0, 1 )
shape = SubResource( 7 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="score" type="RichTextLabel" parent="CanvasLayer"]
modulate = Color( 0, 1, 0.952941, 1 )
margin_left = 237.0
margin_top = 164.0
margin_right = 335.0
margin_bottom = 178.0
bbcode_enabled = true
bbcode_text = "Score:0"
text = "Score:0"

[node name="NotePicker" parent="CanvasLayer" instance=ExtResource( 5 )]
position = Vector2( 264, 32 )

[node name="Addorloss" type="RichTextLabel" parent="CanvasLayer"]
modulate = Color( 0, 0.521569, 1, 1 )
margin_left = 276.0
margin_top = 142.0
margin_right = 314.0
margin_bottom = 161.0
bbcode_enabled = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 16 )

[node name="Flicker" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="FlickerAnimation" type="AnimationPlayer" parent="."]
anims/Blink = SubResource( 19 )
anims/RESET = SubResource( 20 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
modulate = Color( 0.792157, 0.501961, 0, 1 )
position = Vector2( 11, 0 )
emitting = false
amount = 50
direction = Vector2( -5, 0 )
spread = 23.53
gravity = Vector2( 0, 0 )
initial_velocity = 40.0

[connection signal="animation_finished" from="SwingofAxe" to="." method="_on_SwingofAxe_animation_finished"]
[connection signal="area_entered" from="Hurt" to="." method="_on_Hurt_area_entered"]
[connection signal="area_entered" from="Swingbox" to="." method="_on_Swingbox_area_entered"]
[connection signal="area_entered" from="CanvasLayer/NotePicker/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="CanvasLayer/NotePicker/Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="Flicker" to="." method="_on_Flicker_timeout"]

[editable path="CanvasLayer/NotePicker"]
